--- a/frontend/index.html
+++ b/frontend/index.html
@@ -167,10 +167,10 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-8">
+					<div class="col-md-6">
 						<div
 							class="service-box"
-							style="width: 61rem;height: 20rem;"
+							style="width: 28rem;height: 20rem;"
 						>
 							<div class="service-ico">
 								<span class="ico-circle"
@@ -196,6 +196,34 @@
 									class="text-center btn btn-primary"
 								>
 									Compress!
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div
+							class="service-box"
+							style="width: 28rem;height: 20rem;"
+						>
+							<div class="service-ico">
+								<span class="ico-circle"
+									><i class="ion-images"></i
+								></span>
+							</div>
+							<div class="text-center service-content">
+								<h2 class="s-title">
+									Input text to summarize
+								</h2>
+								<input type="text" />
+								<br />
+								<br />
+
+								<button
+									type="button"
+									id="txtSummarize"
+									class="text-center btn btn-primary"
+								>
+									Summarize!
 								</button>
 							</div>
 						</div>
