Final commit for the day...

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Alpha - Q</title>
+		<title>Deoxys.AI</title>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 		<meta content="" name="keywords" />
 		<meta content="" name="description" />
@@ -38,7 +38,7 @@
 			id="mainNav"
 		>
 			<div class="container">
-				<a class="navbar-brand js-scroll" href="#page-top">Alpha - Q</a>
+				<a class="navbar-brand js-scroll" href="#page-top">Deoxys.AI</a>
 				<button
 					class="navbar-toggler collapsed"
 					type="button"
@@ -89,7 +89,7 @@
 				<div class="table-cell">
 					<div class="container">
 						<!--<p class="display-6 color-d">Hello, world!</p>-->
-						<h1 class="intro-title mb-4">Alpha - Q</h1>
+						<h1 class="intro-title mb-4">Deoxys.AI</h1>
 						<p class="intro-subtitle">
 							<!-- <span class="text-slider-items"
 								>Compress Images.</span
